tests/miz/fail/overload/fail_overload_ambiguous_notation_001.miz
definition
  pred _ relates _ means
    truth;
  pred _ relates _ means
    truth;
end;

theorem
  1 relates 1;
proof
end;
